Create User entity
cgen-479b755119ea43b3894b858a4cda43be